# CryFbxTool

./: Game.cryproject  README.md
Code/: CMakeLists.txt  StdAfx.cpp  StdAfx.h
Code/MeshImporter/: AssetImporterFBX.cpp  AssetImporterFBX.h  CreateEngineMesh.cpp  EditorMetaData.cpp  EditorMetaData.h  FbxMetaData.cpp  FbxScene.cpp  FbxScene.h  FbxUtil.cpp  FileUtil-.h  FileUtilNew.cpp  FileUtilNew.h  GlobalImportSettings.cpp  GlobalImportSettings.h  ImporterUtil.cpp  ImporterUtil.h  PathUtil.cpp  PathUtil.h  RcCaller.cpp  TextureHelpers.cpp
Code/MeshImporter/CGF/: 1.txt  CGFLoader.cpp  CGFLoader.h  VClothSaver.cpp  mikktspace.cpp  mikktspace_original.cpp
Code/Player/: Player.cpp  Player.h
Code/Player/Input/: InputEvent.cpp  InputEvent.h
